# rustymon-server

./: .gitignore  .gitmodules  Cargo.toml  Makefile.toml  README.md
data/: spawns.json
migrations/: 0001_initial.toml
src/: main.rs  parse_osm.rs  server.rs
src/handler/: mod.rs
src/handler/frontend/: login.rs  logout.rs  mod.rs
src/handler/world/: get_osm_tags.rs  mod.rs
src/helper/: authentication_required.rs  mod.rs
src/models/: config.rs  db.rs  mod.rs
src/world/: mod.rs
