[workspace]
members = [
    ".",
    "rustymon-world",
]

[package]
name = "rustymon-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Webframework
actix-web = { version = "~4.2" }
actix-toolbox = { version = "~0.8", features = ["ws", "session", "logging"] }

# Hashing algorithm
argon2 = { version = "~0.4" }

# Logging facade
log = { version = "~0.4" }

# Async runtime
tokio = { version = "~1.24", features = ["rt-multi-thread", "macros", "sync"] }
futures = { version = "~0.3" }

# ORM
rorm = { version = "~0.4", features = ["tokio-rustls"] }

# Serialization frameworks
serde = { version = "~1.0", features = ["derive"] }
serde_repr = { version = "~0.1" }
toml = { version = "~0.5" }
chrono = { version = ">=0.4.20", features = ["serde"]  }
base64 = { version = "~0.21" }

# CLI parser
clap = { version = "~4.0", features = ["derive"] }

# OSM parsing
rustymon_world = { version = "~0.1", path = "./rustymon-world" }

[features]
rorm-main = []